tests/base/invalid/ListAccess_CompileFail_1.whiley
import * from whiley.lang.*

int f([int] xs, real y):
    return xs[y]
